@@ -1,3 +1,8 @@
+TAG: littriageload-6-0-14-?
+DATE: 08/27/2019
+STAFF: lec 
+TR13007/RNA Seq/add bib_refs autosequence
+
 TAG: littriageload-6-0-14-5
 DATE: 08/20/2019
 STAFF: lec 
